ausgeben des scoreboards funktioniert, erstes view

--- a/Tests.ipynb
+++ b/Tests.ipynb
@@ -3,21 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "59a65607-3b63-4fe4-9c92-8696b521196b",
+   "id": "aef874c3-13be-49b3-9b05-b2251acfdc5a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<Player: Player object (51)>,\n",
-       " <Player: Player object (52)>,\n",
-       " <Player: Player object (53)>,\n",
-       " <Player: Player object (54)>]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "created elo entry\n",
+      "created elo entry\n",
+      "created elo entry\n",
+      "created elo entry\n"
+     ]
     }
    ],
    "source": [
@@ -35,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e7594148-4c0f-4280-b040-08c3b60aacba",
+   "id": "3a8474fe-5aba-4414-8b09-50db093b081d",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +40,10 @@
      "output_type": "stream",
      "text": [
       "The following 0 players are unpaired:[]\n",
-      "Created match with Merlin/Gandalf vs Harry/Hermine\n"
+      "Created match with Merlin1/Merlin2 vs Merlin3/Merlin4\n",
+      "saving game\n",
+      "[<Elo: Elo object (226)>, <Elo: Elo object (227)>, <Elo: Elo object (228)>, <Elo: Elo object (229)>]\n",
+      "(1016.0, 1016.0, 984.0, 984.0)\n"
      ]
     }
    ],
@@ -53,18 +53,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aea1e4d1-85ed-462b-8694-1f66cc901189",
+   "execution_count": 3,
+   "id": "21d94db4-8a37-46af-baa5-0e10eb6d8f3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Merlin1': 1016, 'Merlin2': 1016, 'Merlin3': 984, 'Merlin4': 984}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Merlin1': 1016, 'Merlin2': 1016, 'Merlin3': 984, 'Merlin4': 984}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "liga.delete_all_players()"
+    "liga.get_scoreboard()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac2e9784-e297-4ab8-9fed-8b1a229dda57",
+   "id": "1e7a9fcc-e4f9-4cb9-a9ae-2b3a096fa638",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liga.new_match()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5b893b1-8c72-424e-b60d-cf4dfc13d6da",
    "metadata": {},
    "outputs": [],
    "source": []
