display scoreboard and Players in django admin

--- a/Tests.ipynb
+++ b/Tests.ipynb
@@ -39,42 +39,118 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The following 0 players are unpaired:[]\n",
+      "Created match with Merlin4/Merlin1 vs Merlin2/Merlin3\n",
+      "Created match with Merlin1/Merlin4 vs Merlin3/Merlin2\n",
+      "Created match with Merlin3/Merlin4 vs Merlin1/Merlin2\n",
+      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
+      "Created match with Merlin3/Merlin2 vs Merlin4/Merlin1\n",
+      "Created match with Merlin2/Merlin1 vs Merlin4/Merlin3\n",
+      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
+      "Created match with Merlin3/Merlin2 vs Merlin4/Merlin1\n",
+      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
+      "Created match with Merlin3/Merlin2 vs Merlin1/Merlin4\n",
+      "Created match with Merlin3/Merlin2 vs Merlin4/Merlin1\n",
+      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
+      "Created match with Merlin4/Merlin3 vs Merlin2/Merlin1\n",
+      "Created match with Merlin4/Merlin1 vs Merlin3/Merlin2\n",
+      "Created match with Merlin3/Merlin2 vs Merlin1/Merlin4\n",
+      "Created match with Merlin3/Merlin4 vs Merlin2/Merlin1\n",
+      "Created match with Merlin4/Merlin1 vs Merlin2/Merlin3\n",
+      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
+      "Created match with Merlin4/Merlin2 vs Merlin3/Merlin1\n",
+      "Created match with Merlin3/Merlin2 vs Merlin4/Merlin1\n",
       "Created match with Merlin1/Merlin2 vs Merlin3/Merlin4\n",
-      "saving game\n",
-      "[<Elo: Elo object (226)>, <Elo: Elo object (227)>, <Elo: Elo object (228)>, <Elo: Elo object (229)>]\n",
-      "(1016.0, 1016.0, 984.0, 984.0)\n"
+      "Created match with Merlin1/Merlin4 vs Merlin3/Merlin2\n",
+      "Created match with Merlin3/Merlin4 vs Merlin2/Merlin1\n",
+      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
+      "Created match with Merlin3/Merlin4 vs Merlin1/Merlin2\n",
+      "Created match with Merlin1/Merlin4 vs Merlin2/Merlin3\n",
+      "Created match with Merlin1/Merlin2 vs Merlin3/Merlin4\n",
+      "Created match with Merlin2/Merlin3 vs Merlin4/Merlin1\n",
+      "Created match with Merlin4/Merlin2 vs Merlin1/Merlin3\n",
+      "Created match with Merlin1/Merlin3 vs Merlin4/Merlin2\n",
+      "Created match with Merlin2/Merlin1 vs Merlin3/Merlin4\n",
+      "Created match with Merlin1/Merlin3 vs Merlin2/Merlin4\n",
+      "Created match with Merlin4/Merlin3 vs Merlin2/Merlin1\n",
+      "Created match with Merlin1/Merlin2 vs Merlin3/Merlin4\n",
+      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
+      "Created match with Merlin3/Merlin2 vs Merlin4/Merlin1\n",
+      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
+      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
+      "Created match with Merlin3/Merlin4 vs Merlin2/Merlin1\n",
+      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
+      "Created match with Merlin3/Merlin2 vs Merlin1/Merlin4\n",
+      "Created match with Merlin4/Merlin1 vs Merlin3/Merlin2\n",
+      "Created match with Merlin1/Merlin3 vs Merlin2/Merlin4\n",
+      "Created match with Merlin4/Merlin2 vs Merlin3/Merlin1\n",
+      "Created match with Merlin2/Merlin4 vs Merlin1/Merlin3\n",
+      "Created match with Merlin4/Merlin3 vs Merlin1/Merlin2\n",
+      "Created match with Merlin4/Merlin1 vs Merlin2/Merlin3\n",
+      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
+      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
+      "Created match with Merlin1/Merlin3 vs Merlin2/Merlin4\n",
+      "Created match with Merlin2/Merlin3 vs Merlin1/Merlin4\n",
+      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
+      "Created match with Merlin1/Merlin3 vs Merlin4/Merlin2\n",
+      "Created match with Merlin2/Merlin4 vs Merlin3/Merlin1\n",
+      "Created match with Merlin3/Merlin4 vs Merlin2/Merlin1\n",
+      "Created match with Merlin2/Merlin1 vs Merlin3/Merlin4\n",
+      "Created match with Merlin2/Merlin1 vs Merlin3/Merlin4\n",
+      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
+      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
+      "Created match with Merlin4/Merlin1 vs Merlin2/Merlin3\n",
+      "Created match with Merlin1/Merlin4 vs Merlin2/Merlin3\n",
+      "Created match with Merlin4/Merlin3 vs Merlin1/Merlin2\n",
+      "Created match with Merlin1/Merlin3 vs Merlin4/Merlin2\n",
+      "Created match with Merlin4/Merlin2 vs Merlin3/Merlin1\n",
+      "Created match with Merlin1/Merlin2 vs Merlin3/Merlin4\n",
+      "Created match with Merlin2/Merlin3 vs Merlin4/Merlin1\n",
+      "Created match with Merlin4/Merlin1 vs Merlin2/Merlin3\n",
+      "Created match with Merlin4/Merlin2 vs Merlin1/Merlin3\n",
+      "Created match with Merlin3/Merlin2 vs Merlin4/Merlin1\n",
+      "Created match with Merlin1/Merlin4 vs Merlin2/Merlin3\n",
+      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
+      "Created match with Merlin4/Merlin2 vs Merlin1/Merlin3\n",
+      "Created match with Merlin2/Merlin3 vs Merlin1/Merlin4\n",
+      "Created match with Merlin2/Merlin3 vs Merlin1/Merlin4\n",
+      "Created match with Merlin2/Merlin4 vs Merlin3/Merlin1\n",
+      "Created match with Merlin3/Merlin4 vs Merlin2/Merlin1\n",
+      "Created match with Merlin2/Merlin4 vs Merlin3/Merlin1\n",
+      "Created match with Merlin2/Merlin3 vs Merlin1/Merlin4\n",
+      "Created match with Merlin1/Merlin4 vs Merlin3/Merlin2\n",
+      "Created match with Merlin3/Merlin4 vs Merlin1/Merlin2\n",
+      "Created match with Merlin2/Merlin4 vs Merlin3/Merlin1\n",
+      "Created match with Merlin3/Merlin2 vs Merlin1/Merlin4\n",
+      "Created match with Merlin2/Merlin4 vs Merlin3/Merlin1\n",
+      "Created match with Merlin4/Merlin2 vs Merlin3/Merlin1\n",
+      "Created match with Merlin3/Merlin2 vs Merlin4/Merlin1\n",
+      "Created match with Merlin1/Merlin4 vs Merlin3/Merlin2\n",
+      "Created match with Merlin2/Merlin4 vs Merlin1/Merlin3\n",
+      "Created match with Merlin1/Merlin4 vs Merlin3/Merlin2\n",
+      "Created match with Merlin2/Merlin3 vs Merlin4/Merlin1\n",
+      "Created match with Merlin2/Merlin4 vs Merlin3/Merlin1\n",
+      "Created match with Merlin4/Merlin1 vs Merlin3/Merlin2\n",
+      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
+      "Created match with Merlin2/Merlin3 vs Merlin1/Merlin4\n",
+      "Created match with Merlin1/Merlin2 vs Merlin3/Merlin4\n",
+      "Created match with Merlin4/Merlin1 vs Merlin2/Merlin3\n",
+      "Created match with Merlin3/Merlin1 vs Merlin2/Merlin4\n",
+      "Created match with Merlin2/Merlin3 vs Merlin4/Merlin1\n",
+      "Created match with Merlin1/Merlin3 vs Merlin2/Merlin4\n",
+      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
+      "Created match with Merlin1/Merlin3 vs Merlin4/Merlin2\n"
      ]
     }
    ],
    "source": [
-    "liga.new_match_day()"
+    "for i in range(100):\n",
+    "    liga.new_match_day()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "21d94db4-8a37-46af-baa5-0e10eb6d8f3b",
+   "cell_type": "raw",
+   "id": "64dd5b57-56ed-4f5d-940b-98e4c737aa1d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Merlin1': 1016, 'Merlin2': 1016, 'Merlin3': 984, 'Merlin4': 984}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Merlin1': 1016, 'Merlin2': 1016, 'Merlin3': 984, 'Merlin4': 984}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "liga.get_scoreboard()"
    ]
