create match day, delete unplayed with buttons

--- a/Tests.ipynb
+++ b/Tests.ipynb
@@ -13,7 +13,9 @@
       "created elo entry\n",
       "created elo entry\n",
       "created elo entry\n",
-      "created elo entry\n"
+      "created elo entry\n",
+      "Creating match day 1\n",
+      "Created match with Merlin4/Merlin3 vs Merlin2/Merlin1\n"
      ]
     }
    ],
@@ -25,144 +27,7 @@
     "django.setup()\n",
     "from League.lib.KickerLeague import KickerLeague\n",
     "from League.models import Player\n",
-    "liga = KickerLeague()\n",
-    "liga.create_example_players()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "3a8474fe-5aba-4414-8b09-50db093b081d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created match with Merlin4/Merlin1 vs Merlin2/Merlin3\n",
-      "Created match with Merlin1/Merlin4 vs Merlin3/Merlin2\n",
-      "Created match with Merlin3/Merlin4 vs Merlin1/Merlin2\n",
-      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
-      "Created match with Merlin3/Merlin2 vs Merlin4/Merlin1\n",
-      "Created match with Merlin2/Merlin1 vs Merlin4/Merlin3\n",
-      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
-      "Created match with Merlin3/Merlin2 vs Merlin4/Merlin1\n",
-      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
-      "Created match with Merlin3/Merlin2 vs Merlin1/Merlin4\n",
-      "Created match with Merlin3/Merlin2 vs Merlin4/Merlin1\n",
-      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
-      "Created match with Merlin4/Merlin3 vs Merlin2/Merlin1\n",
-      "Created match with Merlin4/Merlin1 vs Merlin3/Merlin2\n",
-      "Created match with Merlin3/Merlin2 vs Merlin1/Merlin4\n",
-      "Created match with Merlin3/Merlin4 vs Merlin2/Merlin1\n",
-      "Created match with Merlin4/Merlin1 vs Merlin2/Merlin3\n",
-      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
-      "Created match with Merlin4/Merlin2 vs Merlin3/Merlin1\n",
-      "Created match with Merlin3/Merlin2 vs Merlin4/Merlin1\n",
-      "Created match with Merlin1/Merlin2 vs Merlin3/Merlin4\n",
-      "Created match with Merlin1/Merlin4 vs Merlin3/Merlin2\n",
-      "Created match with Merlin3/Merlin4 vs Merlin2/Merlin1\n",
-      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
-      "Created match with Merlin3/Merlin4 vs Merlin1/Merlin2\n",
-      "Created match with Merlin1/Merlin4 vs Merlin2/Merlin3\n",
-      "Created match with Merlin1/Merlin2 vs Merlin3/Merlin4\n",
-      "Created match with Merlin2/Merlin3 vs Merlin4/Merlin1\n",
-      "Created match with Merlin4/Merlin2 vs Merlin1/Merlin3\n",
-      "Created match with Merlin1/Merlin3 vs Merlin4/Merlin2\n",
-      "Created match with Merlin2/Merlin1 vs Merlin3/Merlin4\n",
-      "Created match with Merlin1/Merlin3 vs Merlin2/Merlin4\n",
-      "Created match with Merlin4/Merlin3 vs Merlin2/Merlin1\n",
-      "Created match with Merlin1/Merlin2 vs Merlin3/Merlin4\n",
-      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
-      "Created match with Merlin3/Merlin2 vs Merlin4/Merlin1\n",
-      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
-      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
-      "Created match with Merlin3/Merlin4 vs Merlin2/Merlin1\n",
-      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
-      "Created match with Merlin3/Merlin2 vs Merlin1/Merlin4\n",
-      "Created match with Merlin4/Merlin1 vs Merlin3/Merlin2\n",
-      "Created match with Merlin1/Merlin3 vs Merlin2/Merlin4\n",
-      "Created match with Merlin4/Merlin2 vs Merlin3/Merlin1\n",
-      "Created match with Merlin2/Merlin4 vs Merlin1/Merlin3\n",
-      "Created match with Merlin4/Merlin3 vs Merlin1/Merlin2\n",
-      "Created match with Merlin4/Merlin1 vs Merlin2/Merlin3\n",
-      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
-      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
-      "Created match with Merlin1/Merlin3 vs Merlin2/Merlin4\n",
-      "Created match with Merlin2/Merlin3 vs Merlin1/Merlin4\n",
-      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
-      "Created match with Merlin1/Merlin3 vs Merlin4/Merlin2\n",
-      "Created match with Merlin2/Merlin4 vs Merlin3/Merlin1\n",
-      "Created match with Merlin3/Merlin4 vs Merlin2/Merlin1\n",
-      "Created match with Merlin2/Merlin1 vs Merlin3/Merlin4\n",
-      "Created match with Merlin2/Merlin1 vs Merlin3/Merlin4\n",
-      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
-      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
-      "Created match with Merlin4/Merlin1 vs Merlin2/Merlin3\n",
-      "Created match with Merlin1/Merlin4 vs Merlin2/Merlin3\n",
-      "Created match with Merlin4/Merlin3 vs Merlin1/Merlin2\n",
-      "Created match with Merlin1/Merlin3 vs Merlin4/Merlin2\n",
-      "Created match with Merlin4/Merlin2 vs Merlin3/Merlin1\n",
-      "Created match with Merlin1/Merlin2 vs Merlin3/Merlin4\n",
-      "Created match with Merlin2/Merlin3 vs Merlin4/Merlin1\n",
-      "Created match with Merlin4/Merlin1 vs Merlin2/Merlin3\n",
-      "Created match with Merlin4/Merlin2 vs Merlin1/Merlin3\n",
-      "Created match with Merlin3/Merlin2 vs Merlin4/Merlin1\n",
-      "Created match with Merlin1/Merlin4 vs Merlin2/Merlin3\n",
-      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
-      "Created match with Merlin4/Merlin2 vs Merlin1/Merlin3\n",
-      "Created match with Merlin2/Merlin3 vs Merlin1/Merlin4\n",
-      "Created match with Merlin2/Merlin3 vs Merlin1/Merlin4\n",
-      "Created match with Merlin2/Merlin4 vs Merlin3/Merlin1\n",
-      "Created match with Merlin3/Merlin4 vs Merlin2/Merlin1\n",
-      "Created match with Merlin2/Merlin4 vs Merlin3/Merlin1\n",
-      "Created match with Merlin2/Merlin3 vs Merlin1/Merlin4\n",
-      "Created match with Merlin1/Merlin4 vs Merlin3/Merlin2\n",
-      "Created match with Merlin3/Merlin4 vs Merlin1/Merlin2\n",
-      "Created match with Merlin2/Merlin4 vs Merlin3/Merlin1\n",
-      "Created match with Merlin3/Merlin2 vs Merlin1/Merlin4\n",
-      "Created match with Merlin2/Merlin4 vs Merlin3/Merlin1\n",
-      "Created match with Merlin4/Merlin2 vs Merlin3/Merlin1\n",
-      "Created match with Merlin3/Merlin2 vs Merlin4/Merlin1\n",
-      "Created match with Merlin1/Merlin4 vs Merlin3/Merlin2\n",
-      "Created match with Merlin2/Merlin4 vs Merlin1/Merlin3\n",
-      "Created match with Merlin1/Merlin4 vs Merlin3/Merlin2\n",
-      "Created match with Merlin2/Merlin3 vs Merlin4/Merlin1\n",
-      "Created match with Merlin2/Merlin4 vs Merlin3/Merlin1\n",
-      "Created match with Merlin4/Merlin1 vs Merlin3/Merlin2\n",
-      "Created match with Merlin3/Merlin1 vs Merlin4/Merlin2\n",
-      "Created match with Merlin2/Merlin3 vs Merlin1/Merlin4\n",
-      "Created match with Merlin1/Merlin2 vs Merlin3/Merlin4\n",
-      "Created match with Merlin4/Merlin1 vs Merlin2/Merlin3\n",
-      "Created match with Merlin3/Merlin1 vs Merlin2/Merlin4\n",
-      "Created match with Merlin2/Merlin3 vs Merlin4/Merlin1\n",
-      "Created match with Merlin1/Merlin3 vs Merlin2/Merlin4\n",
-      "Created match with Merlin1/Merlin2 vs Merlin4/Merlin3\n",
-      "Created match with Merlin1/Merlin3 vs Merlin4/Merlin2\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(100):\n",
-    "    liga.new_match_day()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "64dd5b57-56ed-4f5d-940b-98e4c737aa1d",
-   "metadata": {},
-   "source": [
-    "liga.get_scoreboard()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e7a9fcc-e4f9-4cb9-a9ae-2b3a096fa638",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "liga.new_match()"
+    "liga = KickerLeague()"
    ]
   },
   {
